# idxd-config

./: .gitignore  configure~  output  output.txt
contrib/configs/: app_profile.conf  app_profile2.conf
scripts/: configure-iaa.sh  configure-iaa1.sh  configure-iaa3.sh  iaa1_config.conf  iaa3_config.conf  iaa_config.conf  iaa_config.sh
test/: .gitignore  Makefile.am  README.md  accel_test.c  accel_test.h  async_dnn.c  async_serial  async_serial.c  decomp_latency_.sh  dnn  dnn.c  dnn_async  dnn_async.c  dnn_async_frag  dnn_async_frag.c  dnn_orig  dnn_orig.c  dsa.c  dsa.h  dsa_crc32.h  dsa_prep.c  dsa_run.sh  dsa_streaming_parallel.sh  dsa_streaming_parallel_shared_engines.sh  dsa_test.c  iaa.c  iaa.h  iaa_prep.c  iaa_run.sh  iaa_task_init_utils.h  iaa_test.c  kthreads.h  micro-config.cfg  multi_decomp_latency.sh  pointer_chase  pointer_chase.c  shuffle_test  shuffle_test.c  spt_spinup  spt_spinup.c  (+7 more)
